# gazelle-filegroup

./: BUILD.bazel  MODULE.bazel  README.md  WORKSPACE  def.bzl  deps.bzl  go.mod  go.sum
language/: BUILD.bazel
language/filegroup/: BUILD.bazel  lang.go
