load("@bazel_skylib//:bzl_library.bzl", "bzl_library")
load("@bazel_gazelle//:def.bzl", "DEFAULT_LANGUAGES", "gazelle", "gazelle_binary")
load("@com_github_bazelbuild_buildtools//buildifier:def.bzl", "buildifier")

gazelle_binary(
    name = "gazelle_binary",
    languages = DEFAULT_LANGUAGES + [
        "//language/filegroup",
    ],
)

# gazelle:prefix github.com/sluongng/ugazelle
gazelle(
    name = "gazelle",
    gazelle = "gazelle_binary",
)

gazelle(
    name = "update-deps",
    args = [
        "-from_file=go.mod",
        "-to_macro=deps.bzl%ugazelle_deps",
        "-prune",
    ],
    command = "update-repos",
    gazelle = "gazelle_binary",
)

buildifier(
    name = "buildifier",
    visibility = ["//visibility:public"],
)

alias(
    name = "gobin",
    actual = "@go_sdk//:bin/go",
    visibility = ["//visibility:public"],
)

bzl_library(
    name = "deps",
    srcs = ["deps.bzl"],
    visibility = ["//visibility:public"],
    deps = ["@bazel_gazelle//:deps"],
)

filegroup(
    name = "all_srcs",
    srcs = [
        "//language:all_srcs",
    ],
    visibility = ["//:__subpackages__"],
)
